--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ SynapseHost
 </head>
 
 <body>
-<pre style="word-wrap: break-word; white-space: pre-wrap;"> == $0
+<pre style="word-wrap: break-word; white-space: pre-wrap;">
 
 local Synapse = Instance.new("ScreenGui")
 local Main = Instance.new("Frame")
